--- a/_css/style.css
+++ b/_css/style.css
@@ -16,7 +16,7 @@ a {
 }
 
 a:hover {
-    opacity: 0.7;
+    opacity: 60%;
 }
 
 .titulo {
@@ -24,9 +24,12 @@ a:hover {
     text-transform: uppercase;
     letter-spacing: 4px;
 }
+.titulo-section {
+    padding-bottom: 5px;
+}
 
 nav {
-    background-color: #333;
+    background-color: #111a10; /* cor principal */
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -49,27 +52,26 @@ nav {
 
 .cover {
     width: 100%;
-    height: 500px;
+    height: 300px;
     object-fit: cover;
     opacity: 95%;
 }
 
 .container {
+    display: grid;
     max-width: 100%;
     margin: auto;
     margin-top: 0;
-    flex-direction: column;
 }
 
 .bloco {
     background: #fff;
-    padding: 20px 120px 20px 120px;
+    padding: 20px 50px 20px 350px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-top: -80px;
-    padding-bottom: 100%;
     position: relative;
-    border-top-right-radius: 50px;
-    border-top-left-radius: 50px;
+    border-top-right-radius: 40px;
+    border-top-left-radius: 40px;
 }
 
 .topicos {
@@ -77,16 +79,152 @@ nav {
     margin-top: 10px;
 }
 
-h1, p {
+
+section, h2 {
+    scroll-margin-top: 80px;
+}
+
+h2, h3, p {
     color: #444;
     font-size: 16px;
     font-family: "Poppins";
 }
 
-h1 {
+h2 {
     font-size: 22px;
 }
 
 p {
-    text-align: justify;
+    padding-top: 3px;
+}
+
+h3 {
+    padding-top: 3px;
+    font-size: 18px;
+}
+
+.navlateral{
+    height: 100%;
+    width: 300px;
+    position: fixed;
+    z-index: 1;
+    margin-left: -290px;
+    margin-top: 10px;
+    font-family: "Poppins";
+}
+
+.navlateral-list a:hover {
+    color: rgb(14, 85, 14);
+    opacity: 60%;
+}
+
+.a-style2 {
+    color: #444;
+}
+
+.navlateral-list {
+    display: flex;
+    flex-flow: column;
+    list-style: none;
+    gap: 14px;
+}
+
+.navlateral-list a{
+    border-left: 2px solid #777;
+    padding: 8px 16px;
+}
+
+.navlateral header h3 {
+    margin-bottom: 16px;
+}
+/* faz a lista ficar mais poro ladinho */
+.lista {
+    padding-left: 32px;
+}
+
+table, th, td {
+    font-family: "Poppins";
+    color: #333;
+    border: 2px solid #777;
+    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding: 10px;
+    border-collapse: collapse;
+}
+
+.footer {
+    background: #111a10;
+    height: 300px;
+    padding: 32px 0px 16px;
+    font-family: "Poppins";
+}
+
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 0 0 350px;
+    padding: 0 20px;
+}
+
+.footer-content {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 24px;
+    color: #fff;
+}
+
+.footer-section h3 {
+    color: #fff;
+    margin-bottom: 16px;
+    font-size: 17px;
+    position: relative;
+    padding-bottom: 5px;
+}
+
+.footer-section a {
+    color: #cacaca;
+}
+
+.footer-section a:hover {
+    opacity: 60%;
+}
+
+.footer-section h3::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 50px;
+    height: 2px;
+    background-color: #559b4d;
+}
+
+.footer-sections-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 24px;
+}
+
+.footer-links {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.footer-links li {
+    margin-bottom: 8px;
+}
+
+/* tablet */
+@media screen and (max-width: 1200px){
+    .bloco {
+        padding: 20px 50px 20px 350px;
+    }
+}
+
+/* mobile */
+@media screen and (max-width: 800px) {
+    
 }
