--- a/_css/style.css
+++ b/_css/style.css
@@ -66,7 +66,7 @@ nav {
 
 .bloco {
     background: #fff;
-    padding: 20px 50px 20px 350px;
+    padding: 20px 150px 20px 350px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-top: -80px;
     position: relative;
@@ -217,6 +217,19 @@ table, th, td {
     margin-bottom: 8px;
 }
 
+.mobile-menu {
+    display: none;
+    cursor: pointer;
+}
+
+.mobile-menu div {
+    width: 32px;
+    height: 2px;
+    background: #fff;
+    margin: 8px;
+    transition: 0.3s;
+}
+
 /* tablet */
 @media screen and (max-width: 1200px){
     .bloco {
@@ -225,6 +238,75 @@ table, th, td {
 }
 
 /* mobile */
-@media screen and (max-width: 800px) {
-    
+@media screen and (max-width: 900px) {
+    body {
+        overflow-x: hidden;
+    }
+
+    .nav-list {
+        position: absolute;
+        top: 8vh;
+        right: 0;
+        width: 40vh;
+        height: 92vh;
+        background: #111a10;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in;
+    }
+
+    .nav-list li {
+        margin-left: 0;
+        opacity: 0;
+    }
+
+    .nav-list a:hover {
+        color: #559b4d;
+        opacity: 60%;
+    }
+
+    .mobile-menu {
+        display: block;
+    }
+    /* fazer alinhar */
+    .bloco {
+        padding: 20px 50px 20px 50px;
+    }
+
+    .footer-container {
+        margin: 0;
+    }
+
+    .navlateral {
+        display: none;
+    }
+}
+
+.nav-list.active {
+    transform: translateX(0);
+}
+
+@keyframes navLinkFade {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+.mobile-menu.active .line1 {
+    transform: rotate(-45deg) translate(-7px, 9px);
+}
+
+.mobile-menu.active .line2 {
+    opacity: 0;
+}
+
+.mobile-menu.active .line3 {
+    transform: rotate(45deg) translate(-5px, -7px);
 }
