--- a/_css/style.css
+++ b/_css/style.css
@@ -54,11 +54,12 @@ nav {
     width: 100%;
     height: 300px;
     object-fit: cover;
-    opacity: 95%;
+    opacity: 100%;
+    filter: blur(2px);
+    scale: 105%;
 }
 
 .container {
-    display: grid;
     max-width: 100%;
     margin: auto;
     margin-top: 0;
@@ -72,6 +73,7 @@ nav {
     position: relative;
     border-top-right-radius: 40px;
     border-top-left-radius: 40px;
+    max-width: 100%;
 }
 
 .topicos {
@@ -143,7 +145,6 @@ h3 {
 }
 
 table, th, td {
-    font-family: "Poppins";
     color: #333;
     border: 2px solid #777;
     margin: auto;
@@ -157,6 +158,7 @@ table, th, td {
     background: #111a10;
     padding: 32px 0px 50px 0;
     font-family: "Poppins";
+    z-index: 2;
 }
 
 .footer-container {
@@ -310,3 +312,28 @@ table, th, td {
 .mobile-menu.active .line3 {
     transform: rotate(45deg) translate(-5px, -7px);
 }
+
+@media screen and (max-width: 570px) {
+    .cover {
+        display: none;
+    }
+
+    .bloco {
+        padding-top: 150px;
+    }
+
+    .table {
+        padding: 5px;
+    }
+}
+
+.footer2 {
+    font-family: "Poppins";
+    background: #080e08;
+    color: #fff;
+    justify-items: center;
+    font-size: 10px;
+}
+
+
+/* index */
