--- a/_css/style.css
+++ b/_css/style.css
@@ -101,7 +101,7 @@ p {
 }
 
 h3 {
-    padding-top: 3px;
+    padding-top: 10px;
     font-size: 18px;
 }
 
@@ -141,7 +141,8 @@ h3 {
 }
 
 .lista {
-    padding-left: 32px; /* faz a lista ficar mais poro ladinho */
+    padding-left: 32px;
+    padding-right: 64px; /* faz a lista ficar mais poro ladinho */
 }
 
 table, th, td {
@@ -152,6 +153,7 @@ table, th, td {
     margin-bottom: 30px;
     padding: 10px;
     border-collapse: collapse;
+    font-family: "Arial";
 }
 
 .footer {
@@ -284,6 +286,35 @@ table, th, td {
     .navlateral {
         display: none;
     }
+
+    .footer, .footer-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-content, .footer-sections-wrapper {
+        display: grid;
+        grid-template-columns: none;
+    }
+
+    /* Table responsive wrapper */
+    .table-responsive {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+    }
+    table {
+        max-width: 100%;
+        min-width: 400px;
+        font-size: 14px;
+        margin: 16px 0;
+    }
+    th, td {
+        padding: 6px;
+    }
 }
 
 .nav-list.active {
@@ -315,15 +346,44 @@ table, th, td {
 
 @media screen and (max-width: 570px) {
     .cover {
-        display: none;
+        height: 100vh;
     }
 
     .bloco {
-        padding-top: 150px;
+        padding-top: 20px;
+
+        margin-top: -500px;
     }
 
     .table {
         padding: 5px;
+    }
+    .main-wrapper {
+        padding: 10px 0 10px 0;
+    }
+    .main-block {
+        padding: 8px;
+    }
+    .block {
+        padding: 8px;
+        font-size: 14px;
+    }
+    .section-wrapper {
+        padding: 10px 2px 10px 2px;
+    }
+    h1 {
+        font-size: 1.3em;
+    }
+    h3 {
+        font-size: 1em;
+    }
+    .footer2 {
+        font-size: 10px;
+    }
+
+    table {
+        min-width: 320px;
+        font-size: 12px;
     }
 }
 
@@ -332,7 +392,12 @@ table, th, td {
     background: #080e08;
     color: #fff;
     justify-items: center;
-    font-size: 10px;
+    font-size: 12px;
+}
+
+.link-footer {
+    display: flex;
+    gap: 10px;
 }
 
 
