--- a/css/home.css
+++ b/css/home.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     font-family: "Poppins";
+    transition: 0.3s;
 }
 
 body {
@@ -146,7 +147,7 @@ nav {
 
 .main-content {
     position: fixed;
-    width: 100%;
+    width: 98%;
     height: 100vh;
     z-index: -1;
     filter: blur(3px);
