--- a/css/home.css
+++ b/css/home.css
@@ -330,7 +330,7 @@ nav {
         padding: 0;
     }
     .section-wrapper {
-        padding: 20px 5px 20px 5px;
+        padding: 20px 0px 20px 0px;
     }
     .envelope {
         grid-template-columns: 1fr;
@@ -355,10 +355,6 @@ nav {
     .footer2 {
         font-size: 11px;
     }
-}
-
-/* Mobile menu animation */
-@media screen and (max-width: 900px) {
     .mobile-menu.active .line1 {
         transform: rotate(-45deg) translate(-7px, 9px);
     }
@@ -371,6 +367,9 @@ nav {
     .nav-list.active li {
         opacity: 1;
         transition: opacity 0.3s 0.2s;
+    }
+    .footer2 div{
+        font-size: 10px;
     }
 }
 
@@ -389,13 +388,10 @@ nav {
     .section-wrapper {
         padding: 10px 2px 10px 2px;
     }
-    h1 {
-        font-size: 1.3em;
-    }
     h3 {
         font-size: 1em;
     }
-    .footer2 {
+    .footer2 div {
         font-size: 10px;
     }
 }
