--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,7 @@ table, th, td {
     padding: 32px 0px 50px 0;
     font-family: "Poppins";
     z-index: 2;
+    position: relative;
 }
 
 .footer-container {
